# model_manage

./: .env.example  .gitignore  README.md  install.ps1  install.sh  mm.bat  mm.sh  pyproject.toml
model_manager/: __init__.py  __main__.py  app.py  cli.py
model_manager/agent/: base.py  client.py  conversation.py  error_agent.py  factory.py
model_manager/agent/prompts/: system_error_diagnosis.txt  system_recommendation.txt
model_manager/agent/providers/: anthropic_provider.py  openai_compat.py
model_manager/backends/: base.py  conda.py  pip_venv.py  selector.py
model_manager/catalog/: catalog.py  models.py  recommender.py  resolver.py
model_manager/catalog/data/: catalog.json
model_manager/config/: paths.py  settings.py
model_manager/core/: constants.py  events.py  exceptions.py
model_manager/hardware/: cpu.py  detector.py  disk.py  gpu.py  memory.py  profile.py
model_manager/permissions/: base.py  factory.py  linux.py  macos.py  windows.py
model_manager/recovery/: branch.py  context.py  resume.py
model_manager/state/: machine.py  models.py  store.py
model_manager/storage/: planner.py
model_manager/ui/: chat.py  console.py  dashboard.py
