[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-manager"
version = "0.1.0"
description = "Cross-platform AI model deployment agent"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
    "tenacity>=8.0.0",
    "transitions>=0.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "respx>=0.21.0",
]

[project.scripts]
mm = "model_manager.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["model_manager"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
